force-app/main/default/objects/Brokerage_Split__c/Brokerage_Split__c.object-meta.xml
<CustomObject>
    <description>Schedule to represent how a policy is split between Producers and the Brokerage House.</description>
    <label>Brokerage Split</label>
    <nameField>
        <label>Brokerage Split Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brokerage Splits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>