force-app/main/default/objects/Brokerage_Split__c/fields/Insurance_Policy__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Policy</label>
    <referenceTo>InsurancePolicy</referenceTo>
    <relationshipLabel>Brokerage Splits</relationshipLabel>
    <relationshipName>Brokerage_Splits</relationshipName>
    <type>Lookup</type>
</CustomField>