force-app/main/default/objects/Brokerage_Split__c/fields/New_Business_Split__c.field-meta.xml
<CustomField>
    <fullName>New_Business_Split__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Business Split</label>
    <type>Checkbox</type>
</CustomField>