force-app/main/default/objects/Brokerage_Split__c/fields/Split_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Split_Effective_Date__c</fullName>
    <label>Split Effective Date</label>
    <type>Date</type>
</CustomField>