force-app/main/default/objects/Brokerage_Split__c/fields/Split_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Split_End_Date__c</fullName>
    <inlineHelpText>If a subsequent split is added to the policy, add an end date to the prior split.</inlineHelpText>
    <label>Split End Date</label>
    <type>Date</type>
</CustomField>