force-app/main/default/objects/Brokerage_Split__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Split_Effective_Date__c</columns>
    <columns>Split_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>