force-app/main/default/objects/Brokerage_Split__c/listViews/Split_Templates.listView-meta.xml
<ListView>
    <fullName>Split_Templates</fullName>
    <columns>NAME</columns>
    <columns>New_Business_Split__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>*</value>
    </filters>
    <label>Split Templates</label>
</ListView>